--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.28",
     "axios": "^1.12.2",
     "react": "19.1.1",
     "react-native": "0.82.0",
@@ -19,7 +21,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.3",
     "react-native-reanimated-carousel": "^4.0.3",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.17.1",
     "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
