--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.3",
